Solution for migration with Dockerfile